; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/uniphier/extr_evea.c_evea_codec_probe.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/uniphier/extr_evea.c_evea_codec_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_soc_component = type { i32 }
%struct.evea_priv = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_soc_component*)* @evea_codec_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @evea_codec_probe(%struct.snd_soc_component* %0) #0 {
  %2 = alloca %struct.snd_soc_component*, align 8
  %3 = alloca %struct.evea_priv*, align 8
  store %struct.snd_soc_component* %0, %struct.snd_soc_component** %2, align 8
  %4 = load %struct.snd_soc_component*, %struct.snd_soc_component** %2, align 8
  %5 = call %struct.evea_priv* @snd_soc_component_get_drvdata(%struct.snd_soc_component* %4)
  store %struct.evea_priv* %5, %struct.evea_priv** %3, align 8
  %6 = load %struct.evea_priv*, %struct.evea_priv** %3, align 8
  %7 = getelementptr inbounds %struct.evea_priv, %struct.evea_priv* %6, i32 0, i32 0
  store i32 1, i32* %7, align 4
  %8 = load %struct.evea_priv*, %struct.evea_priv** %3, align 8
  %9 = getelementptr inbounds %struct.evea_priv, %struct.evea_priv* %8, i32 0, i32 1
  store i32 1, i32* %9, align 4
  %10 = load %struct.evea_priv*, %struct.evea_priv** %3, align 8
  %11 = getelementptr inbounds %struct.evea_priv, %struct.evea_priv* %10, i32 0, i32 2
  store i32 1, i32* %11, align 4
  %12 = load %struct.evea_priv*, %struct.evea_priv** %3, align 8
  %13 = call i32 @evea_set_power_state_on(%struct.evea_priv* %12)
  %14 = load %struct.evea_priv*, %struct.evea_priv** %3, align 8
  %15 = call i32 @evea_update_switch_all(%struct.evea_priv* %14)
  ret i32 0
}

declare dso_local %struct.evea_priv* @snd_soc_component_get_drvdata(%struct.snd_soc_component*) #1

declare dso_local i32 @evea_set_power_state_on(%struct.evea_priv*) #1

declare dso_local i32 @evea_update_switch_all(%struct.evea_priv*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
